# PatPat

./: .gitignore  CMakeLists.txt  README.md
resources/sprites/CatPet/: manifest.json
src/: main.cpp
src/core/: animation.cpp  animation.h  desktoppet.cpp  desktoppet.h  game.cpp  game.h
src/pet/: catpet.cpp  catpet.h
src/tools/: Timer.cpp  Timer.h  hittest.cpp  hittest.h  manifest_loader.cpp  manifest_loader.h  minijson.cpp  minijson.h  random.h  t_UI.h  t_math.h  tools.cpp  tools.h
